Fixing spacing between rows , Adding some rules for box class

--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -8,39 +8,28 @@
   font-size: 30px;
 }*/
 
+.box {
+  padding: 15px;
+  margin-bottom: 15px;
+}
+
+.row {
+  padding: 30px 0;
+}
 
 .cover-image {
   min-height: 500px;
   width: 100%;
 }
 
-.about {
-  text-align: center;
-}
-
-.catalogue {
-  text-align: center;
-}
-
 .container {
   box-shadow: 0px 0px 5px #888888;
 }
 
-.contact {
-  padding-bottom: 10px;
+.section-heading {
   text-align: center;
-}
-
-#googleMap {
-  float: right;
-}
-
-#info {
-  text-align: center;
-}
-
-footer {
-  text-align: center;
+  margin: 0px;
+  padding-bottom: 20px;
 }
 
 .fa-4 {
